[package]
name = "cargo-ux"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/cargo-ux"
repository = "https://github.com/angular-rust/cargo-ux"
documentation = "https://docs.rs/cargo-ux"
description = "Main Workflow for Angular Rust Application Development"
keywords = ["angular", "angular-rust", "starter-kit", "ux-framework"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
edition = "2018"
license = "GPL-3.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "workflow"

[features]

[dependencies]
accept-language = "2.0"
chrono = { version = "0.4", features = ["serde"] }
# clap = { version = "2.33", features = ["suggesions", "color"] }
clap = "2.33"
config = "0.11"
console = "0.14"
dialoguer = "0.8"
dirs = "3.0"
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
exitcode = "1.1"
futures = "0.3"
grass = "0.10"
hlua = "0.4"
hyper = "0.14"
hyper-rustls = "0.22"
i18n-embed = "0.12"
i18n-embed-fl = "0.5"
indicatif = "0.15"
lazy_static = "1.4"
locale_config = "0.3"
log = "0.4"
# lua = "0"
regex = "1.4"
rlua = "0.17"
routerify = "2.0"
rust-embed = "5.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tinytemplate = "1.2"
tokio = { version = "1.4", features = ["full"] }
unic-langid = "0.9"
url = { version = "2.2", features = ["serde"] }
users = "0.11"

[dev-dependencies]
